--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
                 </div>
                 
 
-                <div class="check">
+                <div class="nameP">
                     <input class="form-check-input" type="checkbox" name="active" id="active">
                     <label class="form-check-label" for="active">
                         Activo
                     </label>
                 </div>
 
-                <button type="submit" class="submit">Agregar</button>
+                <button type="submit" class="btn">Agregar</button>
             </form>
 <!-- ---------------------------------------------------------------------------------------------------------------- -->
         <div class="table-container">
